--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
       min-height: 100vh;
       background: #ffffff;
       color: var(--black);
-      font-family: 'Space Grotesk', 'Inter', 'Segoe UI', system-ui, -apple-system, sans-serif;
+      font-family: 'Inter', 'Segoe UI', system-ui, -apple-system, sans-serif;
       font-size: 15px;
       -webkit-font-smoothing: antialiased;
       scroll-padding-top: 120px;
@@ -180,7 +180,7 @@
     .category-section {
       display: grid;
       gap: 12px;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
       align-items: stretch;
     }
     .category-title {
@@ -294,14 +294,14 @@
       border: 1px solid var(--border);
       box-shadow: 0 12px 28px rgba(0,0,0,0.12);
       border-radius: 16px;
-      padding: 14px 16px;
-      gap: 10px;
+      padding: 12px 14px;
+      gap: 8px;
       display: none;
       flex-direction: column;
       align-items: center;
       z-index: 999;
     }
-    #cart-items { width: 100%; max-height: 220px; overflow-y: auto; display: grid; gap: 8px; }
+    #cart-items { width: 100%; max-height: 160px; overflow-y: auto; display: grid; gap: 8px; }
     .cart-item {
       display: grid;
       grid-template-columns: 1fr auto 120px;
@@ -354,6 +354,20 @@
       .category-bar { top: 70px; }
       .menu-card { grid-template-columns: 100px 1fr; grid-template-rows: auto auto; }
       .menu-card button { grid-column: 2; justify-self: end; }
+    }
+    @media (max-width: 640px) {
+      .container { padding: 0 clamp(10px, 4vw, 16px); }
+      .category-section { grid-template-columns: 1fr; }
+      .menu-card {
+        grid-template-columns: 90px 1fr auto;
+        padding: 12px;
+        gap: 10px;
+      }
+      .menu-card img { width: 90px; height: 90px; }
+      .menu-card h3 { font-size: 0.95rem; }
+      .menu-card p { font-size: 0.95rem; }
+      .menu-card button { width: 46px; height: 46px; font-size: 1.2rem; }
+      #cart-section { width: 92vw; padding: 12px; }
     }
   </style>
 </head>
