--- a/shop-list.html
+++ b/shop-list.html
@@ -242,6 +242,17 @@
 			.hero { padding: 12px; border-radius: 12px; }
 			.quote-chip { max-width: 100%; }
 		}
+		@media (max-width: 540px) {
+			.topbar { padding: 8px 6px 10px 6px; }
+			.hero {
+				grid-template-columns: 1fr;
+				gap: 10px;
+				padding: 10px 12px;
+			}
+			.hero-main { gap: 6px; }
+			.quote-chip { padding: 8px 10px; font-size: 0.96rem; }
+			.filters { margin-top: 8px; }
+		}
 	</style>
 </head>
 <body>
