--- a/shop-list.html
+++ b/shop-list.html
@@ -34,27 +34,27 @@
 			position: sticky;
 			top: 0;
 			z-index: 6;
-			margin: 0 -8px;
-			padding: 10px 8px 8px 8px;
+			margin: 0 -6px;
+			padding: 8px 8px 6px 8px;
 			background: #ffffff;
 			border-bottom: 1px solid var(--border);
-			box-shadow: 0 4px 14px rgba(0,0,0,0.06);
-			border-radius: 0 0 12px 12px;
+			box-shadow: 0 3px 10px rgba(0,0,0,0.05);
+			border-radius: 0 0 10px 10px;
 		}
 		.hero {
 			display: grid;
 			grid-template-columns: 1fr auto;
-			gap: 16px;
+			gap: 12px;
 			align-items: center;
 			background: #ffffff;
 			border: 1px solid var(--border);
-			border-radius: 14px;
-			padding: 14px 16px;
-			box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+			border-radius: 12px;
+			padding: 10px 12px;
+			box-shadow: 0 5px 14px rgba(0,0,0,0.05);
 		}
 		.hero-main {
 			display: grid;
-			gap: 8px;
+			gap: 6px;
 			align-content: center;
 		}
 		.brand {
@@ -67,23 +67,24 @@
 		}
 		.hero h1 {
 			margin: 0;
-			font-size: clamp(1.6rem, 4vw, 2rem);
-			letter-spacing: 0.6px;
+			font-size: clamp(1.45rem, 3.6vw, 1.9rem);
+			letter-spacing: 0.5px;
 			color: var(--orange-dark);
 		}
 		.quote-chip {
-			margin-top: 6px;
+			margin-top: 4px;
 			display: inline-flex;
 			align-items: center;
-			gap: 8px;
-			padding: 10px 12px;
-			border-radius: 12px;
+			gap: 6px;
+			padding: 8px 10px;
+			border-radius: 10px;
 			border: 1px solid var(--border);
 			background: var(--gray);
-			box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+			box-shadow: 0 3px 10px rgba(0,0,0,0.05);
 			color: var(--black);
 			font-weight: 700;
-			max-width: 680px;
+			max-width: 640px;
+			font-size: 0.96rem;
 		}
 		.quote-chip::before { content: '“'; color: var(--orange); font-size: 1.05rem; }
 		.quote-chip::after { content: '”'; color: var(--orange); font-size: 1.05rem; }
@@ -237,21 +238,22 @@
 		@media (max-width: 880px) { .hero { grid-template-columns: 1fr; align-items: start; } .actions { width: auto; } .filters { position: static; } }
 		@media (max-width: 620px) { .card { grid-template-rows: 150px auto; } .filter-row { flex-direction: column; align-items: flex-start; } .filter-box { width: 100%; } }
 		@media (max-width: 720px) {
-			.page { padding: 12px 14px 28px 14px; }
-			.topbar { position: sticky; margin: 0 -6px; }
-			.hero { padding: 12px; border-radius: 12px; }
+			.page { padding: 12px 12px 24px 12px; }
+			.topbar { position: sticky; margin: 0 -6px; padding: 8px 8px 6px 8px; }
+			.hero { padding: 10px 12px; border-radius: 12px; }
 			.quote-chip { max-width: 100%; }
 		}
 		@media (max-width: 540px) {
-			.topbar { padding: 8px 6px 10px 6px; }
+			.topbar { padding: 6px 6px 6px 6px; box-shadow: 0 3px 8px rgba(0,0,0,0.05); }
 			.hero {
 				grid-template-columns: 1fr;
 				gap: 10px;
-				padding: 10px 12px;
+				padding: 8px 10px;
 			}
 			.hero-main { gap: 6px; }
-			.quote-chip { padding: 8px 10px; font-size: 0.96rem; }
-			.filters { margin-top: 8px; }
+			.hero h1 { font-size: 1.35rem; }
+			.quote-chip { display: none; }
+			.filters { margin-top: 6px; }
 		}
 	</style>
 </head>
