--- a/shop-list.html
+++ b/shop-list.html
@@ -4,39 +4,39 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>UNM Cafeteria – Food Shops</title>
-	<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect x='6' y='6' width='52' height='52' rx='12' ry='12' fill='%23fff' stroke='%23e2e8f0' stroke-width='2'/%3E%3Cpath fill='%23f97316' d='M18 14c4.2 0 7.6 3.4 7.6 7.6 0 3.2-1.8 6-4.6 7.1V46h-6V28.7c-2.8-1.1-4.6-3.9-4.6-7.1C10.4 17.4 13.8 14 18 14z'/%3E%3Cpath fill='%23f97316' d='M34 14h4v10h2V14h4v10h2V14h4v12h-6v20h-6V26h-6z'/%3E%3C/svg%3E">
+			padding-bottom: 32px;
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 	<style>
 		:root {
 			--orange: #f97316;
-			--orange-dark: #ea580c;
-			--black: #0f172a;
+			margin: 0 auto;
+			padding: 12px clamp(12px, 3vw, 20px) 32px clamp(12px, 3vw, 20px);
 			--gray: #f8fafc;
 			--border: #e2e8f0;
 			--panel: #ffffff;
 		}
 		* { box-sizing: border-box; }
-		body {
-			margin: 0;
+			margin: 0 -4px;
+			padding: 6px 8px;
 			font-family: 'Segoe UI', Tahoma, Arial, sans-serif;
 			background: #ffffff;
-			color: var(--black);
-			min-height: 100vh;
+			box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+			border-radius: 0 0 8px 8px;
 			padding-bottom: 32px;
 			-webkit-font-smoothing: antialiased;
 		}
 		.page {
-			max-width: 1180px;
+			gap: 8px;
 			margin: 0 auto;
 			padding: 16px clamp(14px, 3vw, 22px) 42px clamp(14px, 3vw, 22px);
 		}
-		.topbar {
-			position: sticky;
-			top: 0;
+			border-radius: 10px;
+			padding: 8px 10px;
+			box-shadow: 0 4px 12px rgba(0,0,0,0.05);
 			z-index: 6;
 			margin: 0 -6px;
 			padding: 8px 8px 6px 8px;
-			background: #ffffff;
+			gap: 4px;
 			border-bottom: 1px solid var(--border);
 			box-shadow: 0 3px 10px rgba(0,0,0,0.05);
 			border-radius: 0 0 10px 10px;
@@ -67,25 +67,11 @@
 		}
 		.hero h1 {
 			margin: 0;
-			font-size: clamp(1.45rem, 3.6vw, 1.9rem);
-			letter-spacing: 0.5px;
+			font-size: clamp(1.25rem, 3.2vw, 1.6rem);
+			letter-spacing: 0.45px;
 			color: var(--orange-dark);
 		}
-		.quote-chip {
-			margin-top: 4px;
-			display: inline-flex;
-			align-items: center;
-			gap: 6px;
-			padding: 8px 10px;
-			border-radius: 10px;
-			border: 1px solid var(--border);
-			background: var(--gray);
-			box-shadow: 0 3px 10px rgba(0,0,0,0.05);
-			color: var(--black);
-			font-weight: 700;
-			max-width: 640px;
-			font-size: 0.96rem;
-		}
+		.quote-chip { display: none; }
 		.quote-chip::before { content: '“'; color: var(--orange); font-size: 1.05rem; }
 		.quote-chip::after { content: '”'; color: var(--orange); font-size: 1.05rem; }
 		.actions {
@@ -123,23 +109,23 @@
 		}
 		.filters {
 			position: sticky;
-			top: 12px;
+			top: 6px;
 			z-index: 5;
 			display: grid;
-			gap: 8px;
+			gap: 6px;
 			background: #ffffff;
-			padding: 10px;
-			border-radius: 12px;
+			padding: 8px 10px;
+			border-radius: 10px;
 			border: 1px solid var(--border);
-			box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+			box-shadow: 0 3px 10px rgba(0,0,0,0.05);
 		}
 		.filter-row { display: flex; justify-content: space-between; align-items: center; gap: 10px; flex-wrap: wrap; }
 		.filter-box {
 			display: inline-flex;
 			align-items: center;
 			gap: 8px;
-			padding: 8px 10px;
-			border-radius: 12px;
+			padding: 6px 10px;
+			border-radius: 10px;
 			border: 1px solid var(--border);
 			background: #ffffff;
 			box-shadow: 0 4px 12px rgba(0,0,0,0.04);
@@ -147,12 +133,12 @@
 		}
 		.input, select {
 			width: 100%;
-			padding: 12px 14px;
-			border-radius: 12px;
+			padding: 10px 12px;
+			border-radius: 10px;
 			border: 1px solid var(--border);
 			background: linear-gradient(180deg, #ffffff, #fef6ef);
 			color: var(--black);
-			font-size: 1rem;
+			font-size: 0.98rem;
 			outline: none;
 			transition: border 0.15s, box-shadow 0.15s;
 		}
