--- a/shop-list.html
+++ b/shop-list.html
@@ -4,82 +4,73 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>UNM Cafeteria – Food Shops</title>
-			padding-bottom: 32px;
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 	<style>
 		:root {
 			--orange: #f97316;
-			margin: 0 auto;
-			padding: 12px clamp(12px, 3vw, 20px) 32px clamp(12px, 3vw, 20px);
+			--orange-dark: #ea580c;
+			--black: #0f172a;
 			--gray: #f8fafc;
 			--border: #e2e8f0;
 			--panel: #ffffff;
+			--shadow: 0 8px 18px rgba(0,0,0,0.06);
 		}
 		* { box-sizing: border-box; }
-			margin: 0 -4px;
-			padding: 6px 8px;
-			font-family: 'Segoe UI', Tahoma, Arial, sans-serif;
+		body {
+			margin: 0;
+			font-family: 'Inter', 'Segoe UI', Tahoma, Arial, sans-serif;
 			background: #ffffff;
-			box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-			border-radius: 0 0 8px 8px;
+			color: var(--black);
+			min-height: 100vh;
 			padding-bottom: 32px;
 			-webkit-font-smoothing: antialiased;
 		}
 		.page {
-			gap: 8px;
+			max-width: 1180px;
 			margin: 0 auto;
-			padding: 16px clamp(14px, 3vw, 22px) 42px clamp(14px, 3vw, 22px);
+			padding: 12px clamp(12px, 3vw, 20px) 32px clamp(12px, 3vw, 20px);
+			display: grid;
+			gap: 12px;
 		}
-			border-radius: 10px;
-			padding: 8px 10px;
-			box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+		.topbar {
+			position: sticky;
+			top: 0;
 			z-index: 6;
-			margin: 0 -6px;
-			padding: 8px 8px 6px 8px;
-			gap: 4px;
+			margin: 0 -4px;
+			padding: 6px 8px;
+			background: #ffffff;
 			border-bottom: 1px solid var(--border);
-			box-shadow: 0 3px 10px rgba(0,0,0,0.05);
-			border-radius: 0 0 10px 10px;
+			box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+			border-radius: 0 0 8px 8px;
 		}
 		.hero {
 			display: grid;
 			grid-template-columns: 1fr auto;
-			gap: 12px;
+			gap: 8px;
 			align-items: center;
 			background: #ffffff;
 			border: 1px solid var(--border);
-			border-radius: 12px;
-			padding: 10px 12px;
-			box-shadow: 0 5px 14px rgba(0,0,0,0.05);
+			border-radius: 10px;
+			padding: 8px 10px;
+			box-shadow: 0 4px 12px rgba(0,0,0,0.05);
 		}
-		.hero-main {
-			display: grid;
-			gap: 6px;
-			align-content: center;
-		}
+		.hero-main { display: grid; gap: 4px; align-content: center; }
 		.brand {
 			display: flex;
 			gap: 10px;
 			align-items: center;
 			font-weight: 800;
 			color: var(--orange-dark);
-			letter-spacing: 0.5px;
+			letter-spacing: 0.45px;
 		}
 		.hero h1 {
 			margin: 0;
-			font-size: clamp(1.25rem, 3.2vw, 1.6rem);
+			font-size: clamp(1.2rem, 3.2vw, 1.55rem);
 			letter-spacing: 0.45px;
 			color: var(--orange-dark);
 		}
 		.quote-chip { display: none; }
-		.quote-chip::before { content: '“'; color: var(--orange); font-size: 1.05rem; }
-		.quote-chip::after { content: '”'; color: var(--orange); font-size: 1.05rem; }
-		.actions {
-			display: flex;
-			gap: 8px;
-			align-items: center;
-			justify-content: flex-end;
-		}
+		.actions { display: flex; gap: 8px; align-items: center; justify-content: flex-end; }
 		.profile {
 			display: flex;
 			align-items: center;
@@ -133,19 +124,22 @@
 		}
 		.input, select {
 			width: 100%;
-			padding: 10px 12px;
-			border-radius: 10px;
+			padding: 12px 14px;
+			border-radius: 14px;
 			border: 1px solid var(--border);
-			background: linear-gradient(180deg, #ffffff, #fef6ef);
+			background: #ffffff;
 			color: var(--black);
-			font-size: 0.98rem;
+			font-size: 1rem;
 			outline: none;
-			transition: border 0.15s, box-shadow 0.15s;
+			box-shadow: var(--shadow);
+			transition: border 0.15s, box-shadow 0.2s, transform 0.1s ease;
 		}
+		.input::placeholder { color: #94a3b8; font-weight: 600; }
 		select option { color: var(--black); background: #ffffff; }
 		.input:focus, select:focus {
 			border-color: var(--orange);
 			box-shadow: 0 0 0 6px rgba(249,115,22,0.14);
+			transform: translateY(-1px);
 		}
 		.grid {
 			margin-top: 16px;
@@ -222,24 +216,24 @@
 		@keyframes shimmer { 0%{background-position:200% 0;} 100%{background-position:-200% 0;} }
 		.empty { grid-column: 1 / -1; text-align: center; padding: 24px 14px; background: var(--panel); border: 1px solid var(--border); border-radius: 12px; color: #475569; }
 		@media (max-width: 880px) { .hero { grid-template-columns: 1fr; align-items: start; } .actions { width: auto; } .filters { position: static; } }
-		@media (max-width: 620px) { .card { grid-template-rows: 150px auto; } .filter-row { flex-direction: column; align-items: flex-start; } .filter-box { width: 100%; } }
+		@media (max-width: 620px) {
+			.grid { grid-template-columns: 1fr; }
+			.card { grid-template-rows: 150px auto; }
+			.filter-row { flex-direction: column; align-items: flex-start; }
+			.filter-box { width: 100%; }
+		}
 		@media (max-width: 720px) {
-			.page { padding: 12px 12px 24px 12px; }
-			.topbar { position: sticky; margin: 0 -6px; padding: 8px 8px 6px 8px; }
-			.hero { padding: 10px 12px; border-radius: 12px; }
-			.quote-chip { max-width: 100%; }
+			.page { padding: 10px 10px 24px 10px; }
+			.topbar { margin: 0 -6px; padding: 6px 8px; }
+			.hero { padding: 8px 10px; border-radius: 10px; }
+			.grid { gap: 12px; }
 		}
 		@media (max-width: 540px) {
-			.topbar { padding: 6px 6px 6px 6px; box-shadow: 0 3px 8px rgba(0,0,0,0.05); }
-			.hero {
-				grid-template-columns: 1fr;
-				gap: 10px;
-				padding: 8px 10px;
-			}
-			.hero-main { gap: 6px; }
-			.hero h1 { font-size: 1.35rem; }
-			.quote-chip { display: none; }
+			.topbar { padding: 6px 6px; box-shadow: 0 3px 8px rgba(0,0,0,0.05); }
+			.hero { grid-template-columns: 1fr; gap: 8px; padding: 8px 10px; }
+			.hero h1 { font-size: 1.3rem; }
 			.filters { margin-top: 6px; }
+			.grid { grid-template-columns: 1fr; gap: 10px; }
 		}
 	</style>
 </head>
