--- a/shop-list.html
+++ b/shop-list.html
@@ -33,9 +33,7 @@
 			gap: 12px;
 		}
 		.topbar {
-			position: sticky;
-			top: 0;
-			z-index: 6;
+			position: static;
 			margin: 0 -4px;
 			padding: 6px 8px;
 			background: #ffffff;
@@ -100,8 +98,8 @@
 		}
 		.filters {
 			position: sticky;
-			top: 6px;
-			z-index: 5;
+			top: 0;
+			z-index: 7;
 			display: grid;
 			gap: 6px;
 			background: #ffffff;
@@ -224,8 +222,9 @@
 		}
 		@media (max-width: 720px) {
 			.page { padding: 10px 10px 24px 10px; }
-			.topbar { margin: 0 -6px; padding: 6px 8px; }
-			.hero { padding: 8px 10px; border-radius: 10px; }
+			.topbar { margin: 0 -6px; padding: 6px 8px; box-shadow: none; border-bottom: none; }
+			.hero { padding: 8px 10px; border-radius: 10px; box-shadow: none; border: none; }
+			.filters { top: 0; }
 			.grid { gap: 12px; }
 		}
 		@media (max-width: 540px) {
