--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,7 @@
       --orange-dark: #ea580c;
       --black: #0f172a;
       --muted: #475569;
+      --subtle: #94a3b8;
       --gray: #f8fafc;
       --border: #e2e8f0;
       --panel: #ffffff;
@@ -43,49 +44,43 @@
       z-index: 10;
       display: flex;
       align-items: center;
+      justify-content: space-between;
       gap: 12px;
-      padding-top: 14px;
+      padding-top: 12px;
       padding-bottom: 12px;
       background: #ffffff;
       border-bottom: 1px solid var(--border);
       box-shadow: 0 6px 16px rgba(0,0,0,0.06);
       border-radius: 0 0 14px 14px;
     }
-    .back-btn {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      background: linear-gradient(120deg, var(--orange), #fb923c);
-      color: #ffffff;
-      border: 1px solid var(--orange);
-      border-radius: 14px;
-      padding: 10px 16px;
-      font-size: 1rem;
-      font-weight: 800;
-      cursor: pointer;
-      box-shadow: 0 10px 18px rgba(0,0,0,0.08);
-      transition: transform 0.12s ease, box-shadow 0.18s ease, background 0.18s ease, filter 0.18s ease;
-      letter-spacing: 0.15px;
-    }
-    .back-btn:hover { filter: brightness(0.97); box-shadow: 0 12px 24px rgba(0,0,0,0.12); }
-    .back-btn:active { transform: translateY(1px); box-shadow: 0 6px 14px rgba(0,0,0,0.12); }
     .menu-title {
       margin: 0;
-      flex: 1;
-      text-align: center;
-      font-size: clamp(1.6rem, 4vw, 2.2rem);
-      font-weight: 800;
-      letter-spacing: 0.6px;
-      background: linear-gradient(120deg, var(--orange), var(--orange-dark));
-      -webkit-text-fill-color: transparent;
-      -webkit-background-clip: text;
-      background-clip: text;
+      font-size: clamp(1.55rem, 4vw, 2rem);
+      font-weight: 900;
+      color: var(--orange-dark);
+      letter-spacing: 0.4px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
-    .top-bar { display: none; }
+    .header-right { display: inline-flex; align-items: center; gap: 12px; }
+    .profile-circle {
+      width: 44px;
+      height: 44px;
+      border-radius: 14px;
+      background: var(--orange);
+      color: #ffffff;
+      display: grid;
+      place-items: center;
+      font-weight: 900;
+      letter-spacing: 0.2px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.12);
+      border: 1px solid rgba(0,0,0,0.04);
+    }
     .menu-header-wrapper {
       display: flex;
       flex-direction: column;
-      gap: 6px;
+      gap: 10px;
       margin-top: 6px;
       padding-top: 4px;
       align-items: center;
@@ -98,41 +93,112 @@
       letter-spacing: 0.3px;
       max-width: 720px;
     }
+    .quote-strip {
+      width: 100%;
+      max-width: 720px;
+      margin: 4px auto 0 auto;
+      padding: 10px 14px;
+      background: #fff6ed;
+      color: var(--orange-dark);
+      border: 1px solid rgba(249,115,22,0.22);
+      border-radius: 12px;
+      font-weight: 800;
+      letter-spacing: 0.2px;
+      box-shadow: 0 6px 14px rgba(249,115,22,0.08);
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    .quote-dot { width: 10px; height: 10px; border-radius: 50%; background: var(--orange); box-shadow: 0 0 0 6px rgba(249,115,22,0.12); }
     .search-bar-container {
-      margin-top: 16px;
-      padding-top: 6px;
+      margin-top: 14px;
+      padding-top: 4px;
       padding-bottom: 2px;
       display: flex;
       justify-content: center;
       align-items: center;
+      width: 100%;
     }
     #search-bar {
       width: 100%;
       max-width: 720px;
-      padding: 12px 16px;
-      border-radius: 12px;
+      padding: 14px 16px;
+      border-radius: 14px;
       border: 1px solid var(--border);
-      background: linear-gradient(180deg, #ffffff, #fef6ef);
+      background: #ffffff;
       color: var(--black);
       font-size: 1rem;
       outline: none;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.04);
-      transition: border 0.15s ease, box-shadow 0.15s ease;
+      box-shadow: 0 8px 18px rgba(0,0,0,0.06);
+      transition: border 0.15s ease, box-shadow 0.18s ease, transform 0.1s ease;
     }
+    #search-bar::placeholder { color: var(--subtle); font-weight: 600; }
     #search-bar:focus {
       border-color: var(--orange);
       box-shadow: 0 0 0 6px rgba(249,115,22,0.14);
+      transform: translateY(-1px);
     }
+    .filter-toggles {
+      width: 100%;
+      max-width: 720px;
+      margin: 10px auto 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 10px;
+      align-items: center;
+    }
+    .toggle-pill {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 12px 14px;
+      border-radius: 14px;
+      border: 1px solid var(--border);
+      background: #ffffff;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      font-weight: 800;
+      color: var(--muted);
+      gap: 12px;
+    }
+    .toggle-pill label { display: flex; align-items: center; gap: 10px; width: 100%; }
+    .toggle-switch {
+      position: relative;
+      width: 54px;
+      height: 30px;
+    }
+    .toggle-switch input { opacity: 0; width: 0; height: 0; }
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      inset: 0;
+      background: #e2e8f0;
+      border-radius: 999px;
+      transition: background 0.2s ease;
+      box-shadow: inset 0 1px 3px rgba(0,0,0,0.08);
+    }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 22px;
+      width: 22px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      border-radius: 50%;
+      transition: transform 0.2s ease;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.12);
+    }
+    .toggle-switch input:checked + .slider { background: var(--orange); }
+    .toggle-switch input:checked + .slider:before { transform: translateX(24px); }
     .category-bar {
       position: sticky;
-      top: 76px;
+      top: 74px;
       z-index: 8;
       display: flex;
       gap: 10px;
       align-items: center;
       overflow-x: auto;
-      padding-top: 12px;
-      padding-bottom: 12px;
+      padding: 12px;
       margin-top: 12px;
       background: #ffffff;
       border: 1px solid var(--border);
@@ -144,19 +210,19 @@
     .category-btn {
       flex: 0 0 auto;
       padding: 10px 14px;
-      border-radius: 10px;
+      border-radius: 999px;
       border: 1px solid var(--border);
       background: #ffffff;
       color: var(--black);
-      font-weight: 700;
+      font-weight: 800;
       cursor: pointer;
       transition: border 0.15s ease, box-shadow 0.15s ease, background 0.15s ease, color 0.15s ease;
     }
     .category-btn.active, .category-btn:focus {
-      background: var(--orange);
+      background: #fff7ed;
       border-color: var(--orange);
-      color: #ffffff;
-      box-shadow: 0 6px 14px rgba(0,0,0,0.06);
+      color: var(--orange-dark);
+      box-shadow: 0 6px 14px rgba(249,115,22,0.15);
     }
     .container-bg {
       margin-top: 16px;
@@ -165,7 +231,7 @@
       background: #ffffff;
       border: 1px solid var(--border);
       border-radius: 14px;
-      box-shadow: 0 10px 26px rgba(0,0,0,0.06);
+      box-shadow: 0 10px 26px rgba(0,0,0,0.04);
       min-height: 60vh;
     }
     .container {
@@ -201,10 +267,10 @@
       background: #ffffff;
       border: 1px solid var(--border);
       border-radius: 14px;
-      box-shadow: var(--shadow);
+      box-shadow: 0 8px 18px rgba(0,0,0,0.06);
       transition: transform 0.15s ease, box-shadow 0.18s ease;
     }
-    .menu-card:hover { transform: translateY(-2px); box-shadow: 0 14px 32px rgba(0,0,0,0.08); }
+    .menu-card:hover { transform: translateY(-2px); box-shadow: 0 12px 26px rgba(0,0,0,0.08); }
     .menu-card img {
       width: 110px;
       height: 110px;
@@ -227,21 +293,22 @@
       font-weight: 700;
     }
     .menu-card button {
-      width: 52px;
-      height: 52px;
+      width: 48px;
+      height: 48px;
       border-radius: 14px;
       border: 1px solid var(--orange);
       background: var(--orange);
       color: #ffffff;
-      font-size: 1.4rem;
+      font-size: 1rem;
       font-weight: 900;
       cursor: pointer;
-      box-shadow: 0 6px 14px rgba(0,0,0,0.08);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.12);
       transition: transform 0.12s ease, box-shadow 0.18s ease, background 0.18s ease, filter 0.15s ease;
       display: inline-flex;
       align-items: center;
       justify-content: center;
       line-height: 1;
+      padding: 0 12px;
     }
     .menu-card button:hover { filter: brightness(0.95); }
     .menu-card button:active { transform: translateY(1px); box-shadow: 0 4px 12px rgba(0,0,0,0.08); }
@@ -264,21 +331,21 @@
       transform: translateX(-50%);
       width: 92vw;
       max-width: 520px;
-      height: 64px;
+      height: 38px;
       background: var(--orange);
       color: #ffffff;
-      font-size: 1.02rem;
+      font-size: 0.98rem;
       font-weight: 800;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 0 18px;
+      padding: 0 14px;
       border: 1px solid var(--orange);
-      border-radius: 16px;
-      box-shadow: 0 10px 24px rgba(0,0,0,0.12);
+      border-radius: 12px;
+      box-shadow: 0 8px 18px rgba(0,0,0,0.12);
       z-index: 1000;
       cursor: pointer;
-      gap: 12px;
+      gap: 10px;
     }
     #cart-toggle-btn .cart-label { font-weight: 800; }
     #cart-toggle-btn .cart-total { font-weight: 900; }
@@ -349,7 +416,7 @@
     }
     @media (max-width: 820px) {
       .header-bar { justify-content: space-between; }
-      .menu-title { text-align: left; font-size: 1.6rem; }
+      .menu-title { text-align: left; font-size: 1.55rem; }
       .menu-header-wrapper { padding-left: clamp(14px,3vw,22px); padding-right: clamp(14px,3vw,22px); align-items: flex-start; }
       .category-bar { top: 70px; }
       .menu-card { grid-template-columns: 100px 1fr; grid-template-rows: auto auto; }
@@ -366,7 +433,7 @@
       .menu-card img { width: 90px; height: 90px; }
       .menu-card h3 { font-size: 0.95rem; }
       .menu-card p { font-size: 0.95rem; }
-      .menu-card button { width: 46px; height: 46px; font-size: 1.2rem; }
+      .menu-card button { width: 44px; height: 44px; font-size: 0.98rem; padding: 0 10px; }
       #cart-section { width: 92vw; padding: 12px; }
     }
   </style>
@@ -376,18 +443,28 @@
   <div class="background"></div>
 
   <div class="header-bar">
-    <button class="back-btn" onclick="window.location.href='shop-list.html'">← Back</button>
-    <h1 class="menu-title" id="menu-header">Menu</h1>
-  </div>
-  <div class="top-bar">
-    <button class="back-btn" onclick="window.location.href='shop-list.html'">← Shop List</button>
+    <h1 class="menu-title" id="menu-header">Ruchi's Menu</h1>
+    <div class="header-right">
+      <div class="profile-circle" id="profileCircle">G</div>
+    </div>
   </div>
   <div class="menu-header-wrapper">
+    <div class="quote-strip" id="quoteStrip"><span class="quote-dot"></span><span id="quoteText">Good food. Good friends. Good day.</span></div>
     <div class="menu-subtitle" id="menu-subtitle"></div>
   </div>
 
   <div class="search-bar-container">
     <input type="text" id="search-bar" placeholder="Search menu items..." autocomplete="off" />
+  </div>
+  <div class="filter-toggles">
+    <label class="toggle-pill">
+      <span>Veg filter off</span>
+      <span class="toggle-switch"><input type="checkbox" id="vegToggle"><span class="slider"></span></span>
+    </label>
+    <label class="toggle-pill">
+      <span>Available now</span>
+      <span class="toggle-switch"><input type="checkbox" id="availToggle"><span class="slider"></span></span>
+    </label>
   </div>
   <div class="category-bar" id="category-bar"></div>
 
@@ -426,6 +503,24 @@
 
     const urlParams = new URLSearchParams(window.location.search);
     const vendorId = urlParams.get("vendor");
+    const quoteText = document.getElementById("quoteText");
+    const profileCircle = document.getElementById("profileCircle");
+
+    const menuQuotes = [
+      "Good food. Good friends. Good day.",
+      "Grab a bite, skip the stress.",
+      "Fast lines, fresh plates, full focus.",
+      "Eat well now, ace it later.",
+      "Campus life tastes better together."
+    ];
+    let quoteIdx = 0;
+    function cycleMenuQuote() {
+      if (!quoteText) return;
+      quoteText.textContent = menuQuotes[quoteIdx];
+      quoteIdx = (quoteIdx + 1) % menuQuotes.length;
+    }
+    cycleMenuQuote();
+    setInterval(cycleMenuQuote, 10000);
 
     const mamakVendorId = "8z8ZyLjOaYZsGgWcI1ce";
     const isMamak = vendorId === mamakVendorId;
@@ -444,6 +539,7 @@
     let allMenuItems = [];
     let coldDrinkState = {};
     let juiceTakeawayState = {};
+
 
     async function setHeader() {
       if (!vendorId) {
@@ -800,3 +896,4 @@
   </script>
 </body>
 </html>
+
