--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Menu</title>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&family=Inter:wght@400;600;700&family=Manrope:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
     :root {
       --orange: #f97316;
@@ -101,7 +101,7 @@
       background: #fff6ed;
       color: var(--orange-dark);
       border: 1px solid rgba(249,115,22,0.22);
-      border-radius: 12px;
+      border-radius: 999px;
       font-weight: 800;
       letter-spacing: 0.2px;
       box-shadow: 0 6px 14px rgba(249,115,22,0.08);
@@ -142,16 +142,14 @@
       width: 100%;
       max-width: 720px;
       margin: 10px auto 0 auto;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 10px;
-      align-items: center;
+      display: flex;
+      justify-content: flex-end;
     }
     .toggle-pill {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 12px 14px;
+      padding: 10px 12px;
       border-radius: 14px;
       border: 1px solid var(--border);
       background: #ffffff;
@@ -159,6 +157,7 @@
       font-weight: 800;
       color: var(--muted);
       gap: 12px;
+      min-width: 180px;
     }
     .toggle-pill label { display: flex; align-items: center; gap: 10px; width: 100%; }
     .toggle-switch {
@@ -185,7 +184,11 @@
       bottom: 4px;
       background-color: white;
       border-radius: 50%;
-      transition: transform 0.2s ease;
+        border: 2px solid rgba(255,255,255,0.96);
+        border-radius: 9999px !important;
+        background-clip: padding-box;
+        -webkit-appearance: none;
+        appearance: none;
       box-shadow: 0 4px 10px rgba(0,0,0,0.12);
     }
     .toggle-switch input:checked + .slider { background: var(--orange); }
@@ -226,12 +229,12 @@
     }
     .container-bg {
       margin-top: 16px;
-      padding-top: 18px;
-      padding-bottom: 24px;
+      padding-top: 12px;
+      padding-bottom: 16px;
       background: #ffffff;
-      border: 1px solid var(--border);
+      border: none;
       border-radius: 14px;
-      box-shadow: 0 10px 26px rgba(0,0,0,0.04);
+      box-shadow: none;
       min-height: 60vh;
     }
     .container {
@@ -245,8 +248,8 @@
     }
     .category-section {
       display: grid;
-      gap: 12px;
-      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 14px;
+      grid-template-columns: 1fr;
       align-items: stretch;
     }
     .category-title {
@@ -256,6 +259,16 @@
       letter-spacing: 0.3px;
       color: var(--orange-dark);
       grid-column: 1 / -1;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .category-title::after {
+      content: "";
+      flex: 1;
+      height: 2px;
+      background: linear-gradient(90deg, var(--orange), rgba(249,115,22,0));
+      border-radius: 999px;
     }
     .menu-card {
       position: relative;
@@ -265,12 +278,12 @@
       align-items: center;
       padding: 14px 14px;
       background: #ffffff;
-      border: 1px solid var(--border);
+      border: none;
       border-radius: 14px;
-      box-shadow: 0 8px 18px rgba(0,0,0,0.06);
-      transition: transform 0.15s ease, box-shadow 0.18s ease;
+      box-shadow: 0 8px 18px rgba(0,0,0,0.05);
+      transition: transform 0.12s ease, box-shadow 0.18s ease;
     }
-    .menu-card:hover { transform: translateY(-2px); box-shadow: 0 12px 26px rgba(0,0,0,0.08); }
+    .menu-card:hover { transform: translateY(-1px); box-shadow: 0 10px 20px rgba(0,0,0,0.08); }
     .menu-card img {
       width: 110px;
       height: 110px;
@@ -293,25 +306,27 @@
       font-weight: 700;
     }
     .menu-card button {
-      width: 48px;
-      height: 48px;
+      min-width: 112px;
+      height: 44px;
       border-radius: 14px;
-      border: 1px solid var(--orange);
+      border: 2px solid #ffffff;
       background: var(--orange);
       color: #ffffff;
-      font-size: 1rem;
+      font-size: 0.96rem;
       font-weight: 900;
+      letter-spacing: 0.2px;
       cursor: pointer;
       box-shadow: 0 8px 16px rgba(0,0,0,0.12);
-      transition: transform 0.12s ease, box-shadow 0.18s ease, background 0.18s ease, filter 0.15s ease;
+      transition: transform 0.12s ease, box-shadow 0.18s ease, filter 0.15s ease;
       display: inline-flex;
       align-items: center;
       justify-content: center;
       line-height: 1;
-      padding: 0 12px;
+      padding: 0 18px;
+      white-space: nowrap;
     }
-    .menu-card button:hover { filter: brightness(0.95); }
-    .menu-card button:active { transform: translateY(1px); box-shadow: 0 4px 12px rgba(0,0,0,0.08); }
+    .menu-card button:hover { filter: brightness(0.95); box-shadow: 0 10px 20px rgba(0,0,0,0.14); }
+    .menu-card button:active { transform: translateY(1px); box-shadow: 0 6px 14px rgba(0,0,0,0.1); }
     .menu-card.unavailable { filter: grayscale(0.25) brightness(1.02); opacity: 0.7; pointer-events: none; }
     .menu-card .not-available-overlay {
       position: absolute;
@@ -331,24 +346,27 @@
       transform: translateX(-50%);
       width: 92vw;
       max-width: 520px;
-      height: 38px;
+      height: 66px;
       background: var(--orange);
       color: #ffffff;
-      font-size: 0.98rem;
+      font-size: 1rem;
       font-weight: 800;
+      font-family: 'Manrope', 'Space Grotesk', 'Inter', 'Segoe UI', system-ui, -apple-system, sans-serif;
+      letter-spacing: 0.12px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 0 14px;
+      padding: 0 18px;
       border: 1px solid var(--orange);
       border-radius: 12px;
       box-shadow: 0 8px 18px rgba(0,0,0,0.12);
       z-index: 1000;
       cursor: pointer;
       gap: 10px;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.18);
     }
-    #cart-toggle-btn .cart-label { font-weight: 800; }
-    #cart-toggle-btn .cart-total { font-weight: 900; }
+    #cart-toggle-btn .cart-label { font-weight: 800; color: #ffffff; }
+    #cart-toggle-btn .cart-total { font-weight: 800; color: #ffffff; }
     #cart-badge { display: none !important; }
     #cart-section {
       position: fixed;
@@ -368,6 +386,10 @@
       align-items: center;
       z-index: 999;
     }
+    #cart-section, #cart-section * {
+      font-family: 'Manrope', 'Space Grotesk', 'Inter', 'Segoe UI', system-ui, -apple-system, sans-serif;
+      letter-spacing: 0.1px;
+    }
     #cart-items { width: 100%; max-height: 160px; overflow-y: auto; display: grid; gap: 8px; }
     .cart-item {
       display: grid;
@@ -380,9 +402,9 @@
       border-radius: 10px;
       color: var(--black);
     }
-    .empty-cart { margin: 0; text-align: center; color: var(--muted); font-weight: 700; }
-    .cart-item-name { font-weight: 800; }
-    .cart-item-price { font-weight: 800; color: var(--orange-dark); }
+    .empty-cart { margin: 0; text-align: center; color: var(--muted); font-weight: 500; }
+    .cart-item-name { font-weight: 500; }
+    .cart-item-price { font-weight: 500; color: var(--orange-dark); }
     .cart-item-controls {
       display: inline-flex;
       justify-content: flex-end;
@@ -394,7 +416,7 @@
       border-radius: 8px;
       border: 1px solid var(--border);
       background: #ffffff;
-      font-weight: 900;
+      font-weight: 500;
       cursor: pointer;
       color: var(--black);
     }
@@ -402,7 +424,7 @@
       background: #10b981;
       color: #ffffff;
       font-size: 1rem;
-      font-weight: 800;
+      font-weight: 500;
       padding: 12px 14px;
       border-radius: 12px;
       width: 100%;
@@ -411,6 +433,7 @@
       box-shadow: 0 8px 18px rgba(16,185,129,0.25);
       cursor: pointer;
     }
+    #cart-count, #cart-total { font-weight: 500; }
     @media (max-width: 960px) {
       .category-section { grid-template-columns: repeat(auto-fill, minmax(240px, 1fr)); }
     }
@@ -424,7 +447,7 @@
     }
     @media (max-width: 640px) {
       .container { padding: 0 clamp(10px, 4vw, 16px); }
-      .category-section { grid-template-columns: 1fr; }
+      .category-section { grid-template-columns: 1fr; gap: 12px; }
       .menu-card {
         grid-template-columns: 90px 1fr auto;
         padding: 12px;
@@ -433,7 +456,7 @@
       .menu-card img { width: 90px; height: 90px; }
       .menu-card h3 { font-size: 0.95rem; }
       .menu-card p { font-size: 0.95rem; }
-      .menu-card button { width: 44px; height: 44px; font-size: 0.98rem; padding: 0 10px; }
+      .menu-card button { min-width: 104px; height: 42px; font-size: 0.92rem; padding: 0 14px; }
       #cart-section { width: 92vw; padding: 12px; }
     }
   </style>
@@ -457,10 +480,6 @@
     <input type="text" id="search-bar" placeholder="Search menu items..." autocomplete="off" />
   </div>
   <div class="filter-toggles">
-    <label class="toggle-pill">
-      <span>Veg filter off</span>
-      <span class="toggle-switch"><input type="checkbox" id="vegToggle"><span class="slider"></span></span>
-    </label>
     <label class="toggle-pill">
       <span>Available now</span>
       <span class="toggle-switch"><input type="checkbox" id="availToggle"><span class="slider"></span></span>
@@ -567,7 +586,7 @@
           <h3 class="menu-link">${data.name || 'Unnamed Item'}</h3>
           <p>RM ${parseFloat(data.price).toFixed(2)}</p>
         </div>
-        <button ${data.available === false ? "disabled" : ""} data-name="${data.name}" data-category="${category}">+</button>
+        <button ${data.available === false ? "disabled" : ""} data-name="${data.name}" data-category="${category}">Add to cart</button>
         ${data.available === false ? `<div class="not-available-overlay">Finished</div>` : ""}
       `;
       const title = card.querySelector(".menu-link");
@@ -896,4 +915,5 @@
   </script>
 </body>
 </html>
+
 
